--- a/public-schools-map/index.html
+++ b/public-schools-map/index.html
@@ -2,9 +2,20 @@
 <html>
 <head>
   <title>School District Expenditures</title>
+  <style>
+  #legend {
+    position: absolute;
+    bottom:0;
+    left:0;
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 15%;
+  }
+  </style>
 </head>
 <body>
-  <img src="../images/schools-legend-white-background.png" />
-  <div id="map"></div>
+  <img src="../images/schools-legend-white-background.png" id="legend" />
+  <iframe width="100%" height="100%" frameBorder="0" src="https://a.tiles.mapbox.com/v4/aarondennis.51954ab2.html?access_token=pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw"></iframe>
 </body>
 </html>
