--- a/public-schools-map/index.html
+++ b/public-schools-map/index.html
@@ -3,6 +3,10 @@
 <head>
   <title>School District Expenditures</title>
   <style>
+  #map {
+    height: 100%;
+    width: 100%;
+  }
   #legend {
     position: absolute;
     bottom:0;
@@ -16,6 +20,8 @@
 </head>
 <body>
   <img src="../images/schools-legend-white-background.png" id="legend" />
-  <iframe width="100%" height="100%" frameBorder="0" src="https://a.tiles.mapbox.com/v4/aarondennis.51954ab2.html?access_token=pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw"></iframe>
+  <div id="map">
+    <iframe width="100%" height="100%" frameBorder="0" src="https://a.tiles.mapbox.com/v4/aarondennis.51954ab2.html?access_token=pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw"></iframe>
+  </div>
 </body>
 </html>
