--- a/public-schools-map/index.html
+++ b/public-schools-map/index.html
@@ -9,12 +9,12 @@
   }
   #legend {
     position: absolute;
-    bottom:0;
-    left:0;
+    top:5%;
+    right:5%;
     width: auto;
-    max-width: 100%;
+    max-width: 90%;
     height: auto;
-    max-height: 15%;
+    max-height: 25%;
   }
   </style>
 </head>
