--- a/public-schools-map/index.html
+++ b/public-schools-map/index.html
@@ -9,19 +9,19 @@
   }
   #legend {
     position: absolute;
-    top:5%;
-    right:5%;
+    top:2%;
+    right:2%;
     width: auto;
     max-width: 90%;
     height: auto;
-    max-height: 25%;
+    max-height: 35%;
   }
   </style>
 </head>
 <body>
   <img src="../images/schools-legend-white-background.png" id="legend" />
   <div id="map">
-    <iframe width="100%" height="100%" frameBorder="0" src="https://a.tiles.mapbox.com/v4/aarondennis.51954ab2.html?access_token=pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw"></iframe>
+    <iframe src="https://a.tiles.mapbox.com/v4/aarondennis.51954ab2.html?access_token=pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw"></iframe>
   </div>
 </body>
 </html>
