make map larger

--- a/public-schools-map/index.html
+++ b/public-schools-map/index.html
@@ -20,8 +20,6 @@
 </head>
 <body>
   <img src="../images/schools-legend-white-background.png" id="legend" />
-  <div id="map">
-    <iframe src="https://a.tiles.mapbox.com/v4/aarondennis.51954ab2.html?access_token=pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw"></iframe>
-  </div>
+  <iframe id="map" src="https://a.tiles.mapbox.com/v4/aarondennis.51954ab2.html?access_token=pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw"></iframe>
 </body>
 </html>
