larger map frame

--- a/public-schools-map/index.html
+++ b/public-schools-map/index.html
@@ -4,8 +4,8 @@
   <title>School District Expenditures</title>
   <style>
   #map {
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: auto;
   }
   #legend {
     position: absolute;
@@ -20,6 +20,6 @@
 </head>
 <body>
   <img src="../images/schools-legend-white-background.png" id="legend" />
-  <iframe id="map" src="https://a.tiles.mapbox.com/v4/aarondennis.51954ab2.html?access_token=pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw"></iframe>
+  <iframe id="map" frameBorder="0" src="https://a.tiles.mapbox.com/v4/aarondennis.51954ab2.html?access_token=pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw"></iframe>
 </body>
 </html>
