larger map frame

--- a/public-schools-map/index.html
+++ b/public-schools-map/index.html
@@ -4,8 +4,11 @@
   <title>School District Expenditures</title>
   <style>
   #map {
-    height: auto;
-    width: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
   #legend {
     position: absolute;
