--- a/public-schools-map/index.html
+++ b/public-schools-map/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>School District Expenditures</title>
+  
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
+  <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
+  
   <style>
-  #map {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
+  body { margin:0; padding:0; }
+  #map { position:absolute; top:0; bottom:0; width:100%; z-index: 1; }
   #legend {
     position: absolute;
-    top:2%;
-    right:2%;
+    bottom:2%;
+    left:2%;
     width: auto;
     max-width: 90%;
     height: auto;
-    max-height: 35%;
+    max-height: 30%;
+    z-index: 2;
   }
   </style>
 </head>
+
 <body>
-  <img src="../images/schools-legend-white-background.png" id="legend" />
-  <iframe id="map" frameBorder="0" src="https://a.tiles.mapbox.com/v4/aarondennis.51954ab2.html?access_token=pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw"></iframe>
+  <img src="schools-legend-white-background.png" id="legend" />
+  <div id='map'></div>
+<script>
+L.mapbox.accessToken = 'pk.eyJ1IjoiYWFyb25kZW5uaXMiLCJhIjoiem5LLURoYyJ9.T3tswGTI5ve8_wE-a02cMw';
+var map = L.mapbox.map('map', 'aarondennis.51954ab2')
+    </script>
 </body>
+
 </html>
